# libmdp

./: .gitmodules  .travis.yml  CMakeLists.txt  Findlibzmq.cmake  README.md  ci_build.sh  makefile
include/: mdp.h  mdp_brk.h  mdp_broker.h  mdp_cli.h  mdp_client.h  mdp_define.h  mdp_message.h  mdp_msg.h  mdp_worker.h  mdp_wrk.h
src/: mdp_brk.cc  mdp_cli.cc  mdp_worker.cc  mdp_wrk.cc
